// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unpublish-document should handle unpublishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`unpublish-document should unpublish a published document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
